fix scroll overflow on holding page

--- a/styles/Holding.module.css
+++ b/styles/Holding.module.css
@@ -1,3 +1,8 @@
+.bg {
+  width: 100%;
+  height: 100%;
+}
+
 .holding {
   position: absolute;
   top: 50%;
